# src/routers/index.js
@@ -2,8 +2,11 @@
 
 import { Router } from 'express';
 import authRouter from './auth.js';
+import audioRouter from './audio.js';
 
 const router = Router();
+
+router.use('/audio', audioRouter);
 
 router.use('/auth', authRouter);
 
